--- a/rails/books_api/Gemfile
+++ b/rails/books_api/Gemfile
@@ -13,7 +13,9 @@ gem "pg", "~> 1.1"
 gem "puma", "~> 5.0"
 
 # Build JSON APIs with ease [https://github.com/rails/jbuilder]
-# gem "jbuilder"
+gem "jbuilder"
+
+gem 'active_model_serializers', '~> 0.10.13'
 
 # Use Redis adapter to run Action Cable in production
 # gem "redis", "~> 4.0"
