--- a/rails/books_api/Gemfile
+++ b/rails/books_api/Gemfile
@@ -17,6 +17,10 @@ gem "jbuilder"
 
 gem 'active_model_serializers', '~> 0.10.13'
 
+gem 'jwt', '~> 2.3'
+
+gem 'bcrypt', '~> 3.1', '>= 3.1.17'
+
 # Use Redis adapter to run Action Cable in production
 # gem "redis", "~> 4.0"
 
